# Kernel-Based-Sandbox

./: README.md
kernel-module/: Makefile  libcallsandbox.c
libdummy/: libdummy.c  libdummy.h
llvm-pass/: CMakeLists.txt  README.md  build.sh  example.c
llvm-pass/include/Policy/: LibCallGraph.h
llvm-pass/src/: LibCallGraph.cpp  LibCallPass.cpp
sandboxctl/: Makefile  sandboxctl.c
